# nongurigaeru

./: .clang-format  .clang-format.license  CMakeLists.txt  README.md
src/: CMakeLists.txt  NGAppMain.cpp  NGAppMain.h  NGApplication.cpp  NGApplication.h  NGLib.h  NGPrivateConstants_p.h  NGPropertySavingRestoring.cpp  NGPropertySavingRestoring.h  NGRestorer.cpp  NGRestorer.h  NGSavable.cpp  NGSavable.h  NGSelfSavable.cpp  NGSelfSavable.h
src/quick/: CMakeLists.txt  NGBeacon.cpp  NGBeacon.h  NGBeaconController.cpp  NGBeaconController.h  NGBeaconControllerDelegate.cpp  NGBeaconControllerDelegate.h  NGLibQuick.h  NGToolBarController.cpp  NGToolBarController.h  NGToolBarDelegate.cpp  NGToolBarDelegate.h  NGToolBarItem.cpp  NGToolBarItem.h
src/quick/plugin/: CMakeLists.txt  NGQuickPlugin.cpp  NGQuickPlugin.h  PrivateToolBarViewDelegate.cpp  PrivateToolBarViewDelegate.h  Resources.qrc
src/quick/plugin/controls/: BlockDropArea.qml  BlockMouseArea.qml  ToolBarPaletteView.qml  ToolBarView.qml  qmldir
test/: CMakeLists.txt  test.cpp
